--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
-    <title>Snowpack App</title>
-  </head>
-  <body>
-    <img id="img" src="/logo.svg" />
-    <canvas id="canvas"></canvas>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Wa-Tor in JavaScript" />
+  <link rel="stylesheet" type="text/css" href="/index.css" />
+  <title>Wa-Tor</title>
+</head>
+
+<body>
+  <div class="container">
+    <br>
+    <form>
+      <h2>Parameters</h2>
+
+      <label for="nfish">Number of fish</label>
+      <input type="number" class="form-control" id="nfish" placeholder="Enter number">
+      <label for="nshark">Number of sharks</label>
+      <input type="number" class="form-control" id="nshark" placeholder="Enter number">
+      <label for="fbreed">Fish breed every</label>
+      <input type="number" class="form-control" id="fbreed" placeholder="Enter number">
+      <label for="sbreed">Sharks breed every</label>
+      <input type="number" class="form-control" id="sbreed" placeholder="Enter number">
+      <label for="sbreed">Sharks starve after</label>
+      <input type="number" class="form-control" id="starve" placeholder="Enter number">
+
+    </form>
+    <br>
+    <button id="start" class="btn btn-primary">Start</button>
+    <p id="counts"></p>
+    <span id="fps"></span><br>
+    <canvas width="800" height="800" id="canvas" style="display: inline;"></canvas>
+    <!-- <canvas width="600" height="600" style="display: inline;" id="chart"></canvas> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="/dist/index.js"></script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  </div>
+  <script type="module" src="/dist/index.js"></script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+</body>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
 </html>
