--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Wa-Tor in JavaScript" />
-  <link rel="stylesheet" type="text/css" href="/index.css" />
+  <link rel="stylesheet" type="text/css" href="./index.css" />
   <title>Wa-Tor</title>
 </head>
 
@@ -36,7 +36,7 @@
     <!-- <canvas width="600" height="600" style="display: inline;" id="chart"></canvas> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </div>
-  <script type="module" src="/dist/index.js"></script>
+  <script type="module" src="./dist/index.js"></script>
 
 </body>
 
