--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
 
 <body>
   <div class="container">
-    <br>
     <form>
       <h2>Parameters</h2>
 
@@ -33,7 +32,7 @@
     <p id="counts"></p>
     <span id="fps"></span><br>
     <canvas width="800" height="800" id="canvas" style="display: inline;"></canvas>
-    <!-- <canvas width="600" height="600" style="display: inline;" id="chart"></canvas> -->
+    <canvas width="600" height="600" style="display: inline;" id="chart"></canvas>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </div>
   <script type="module" src="./dist/index.js"></script>
